:bug: bg(UI):fix layout broke
For some reasons that we don't know the general layout of the app was broken

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -13,9 +13,11 @@ html {
 }
 
 body {
-    height: 100vh;
-    width: 100vw;
     margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 a {
@@ -290,9 +292,8 @@ input[type=checkbox] {
 }
 
 .dash-main {
-    width: 65vw;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .dash-main p {
@@ -305,9 +306,10 @@ input[type=checkbox] {
 
 .dash-footer {
     background-color: var(--main-bg-color);
-    position: absolute;
+   /* position: absolute;
     width: 100%;
     margin: 0;
+    bottom: 0;*/
 }
 
 .dash-footer,
@@ -436,11 +438,13 @@ input[type=checkbox] {
 
 .post-content {
     margin: 2em 0;
+    width: 65vw;
 }
 
 hr {
     width: 100%;
     border: 1px solid;
+    width: 65vw;
 }
 
 .comment-section {
@@ -641,11 +645,6 @@ hr {
 
 .post-description {
   margin: auto;
-}
-
-.dash-main {
-  margin-left: 0;
-  margin-right: 0;
 }
 
 .padding-rt,
